Fix: Ordered lists with block elements inside on small screens

--- a/src/styles/classes/text.pcss
+++ b/src/styles/classes/text.pcss
@@ -80,7 +80,7 @@ Base text styles
 	}
 
 	:global(.text) ol {
-		list-style-position: inside;
+		padding-left: var(--list-margin);
 	}
 }
 
